# Realtime-Rendering-of-Fur

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: Camera.h  FileReader.hpp  MeshObject.h  ShaderProgram.hpp  Texture.h
shaders/: furShader.frag  furShader.gs  furShader.tc  furShader.te  furShader.vert  furSimulation.compute  passThrough.frag  passThrough.gs  passThrough.tc  passThrough.te  passThrough.vert  plainShader.frag  plainShader.vert
src/: FileReader.cpp  MeshObject.cpp  ShaderProgram.cpp  Texture.cpp
textures/: sky.tga
